# SeedPay

./: .gitignore  README.md
code/: AppBridge.cpp  AppBridge.h  ApplicationResources.cpp  ApplicationResources.h  CMakeLists.txt  DashboardPage.qml  Localizer.cpp  Localizer.h  LoginPage.qml  Main.qml  RegisterPage.qml  Settings.h  SplashScreen.qml  TransactionDetails.cpp  TransactionDetails.h  TransactionFileSystemRepository.cpp  TransactionFileSystemRepository.h  TransactionInMemoryRepository.cpp  TransactionInMemoryRepository.h  TransactionRepository.h  TransactionRow.qml  TransactionService.cpp  TransactionService.h  TransactionType.cpp  TransactionType.h  User.h  UserFileSystemRepository.cpp  UserFileSystemRepository.h  UserRepository.h  main.cpp  resources.qrc
